--- a/simple_manage/templates/deploy_it/portal.html
+++ b/simple_manage/templates/deploy_it/portal.html
@@ -1,10 +1,19 @@
-<html>
-  <title></title>
-  <body>
-    <h1>Deploy</h1>
-    <a href="{% url deploy %}">Deploy to staging server</a>
-    <br/>
-    <br/>
-    <a href="">Deploy to product server</a>
-  </body>
-</html>
+{% extends 'base.html' %}
+
+
+{% block body %}
+<script>
+    function display_deploy_server(button) {
+        document.getElementById(button.id + 'ing').style.display = '';
+        button.style.display = 'none';
+    }
+</script>
+<h1>Deploy</h1>
+<a id="staging_deploy" href="{% url deploy %}" onclick="display_deploy_server(this);">Deploy to staging server</a>
+<a id="staging_deploying" style="display: none">Deploy to staging server (running ...)</a>
+
+<br/>
+<br/>
+<a id="production_deploy" href="" onclick="display_deploy_server(this);">Deploy to production server</a>
+<a id="production_deploying" style="display: none">Deploy to production server (running ...)</a>
+{% endblock body %}
