--- a/simple_manage/templates/deploy_it/portal.html
+++ b/simple_manage/templates/deploy_it/portal.html
@@ -9,11 +9,11 @@
     }
 </script>
 <h1>Deploy</h1>
-<a id="staging_deploy" href="{% url deploy %}" onclick="display_deploy_server(this);">Deploy to staging server</a>
+<a id="staging_deploy" href="{% url deploy_staging %}" onclick="display_deploy_server(this);">Deploy to staging server</a>
 <a id="staging_deploying" style="display: none">Deploy to staging server (running ...)</a>
 
 <br/>
 <br/>
-<a id="production_deploy" href="" onclick="display_deploy_server(this);">Deploy to production server</a>
+<a id="production_deploy" href="{% url deploy_production %}" onclick="display_deploy_server(this);">Deploy to production server</a>
 <a id="production_deploying" style="display: none">Deploy to production server (running ...)</a>
 {% endblock body %}
