update web deploy interface

--- a/simple_manage/templates/deploy_it/deploying.html
+++ b/simple_manage/templates/deploy_it/deploying.html
@@ -1,4 +1,9 @@
-{% extends 'base.html' %}
+{% extends '2column_3_1.html' %}
+
+
+{% block header %}
+<h1>Deploy ...</h1>
+{% endblock header %}
 
 
 {% block body %}
