--- a/simple_manage/templates/base.html
+++ b/simple_manage/templates/base.html
@@ -4,24 +4,20 @@
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
   <title>{% block title %}{% endblock %}</title>
+  <link rel="stylesheet" href="/static/css/screen.css" type="text/css" media="screen, projection">
+  <link rel="stylesheet" href="/static/css/plugins/menu.css" type="text/css" media="screen, projection">
 </head>
 
 <body>
-  <div id="header">
-    <div class="page_margins">
-    {% block header %}{% endblock header %}
+  <div class="container">
+    <div class="header">
+      {% block header %}{% endblock header %}
     </div>
-  </div>
-  <div class="page_margins">
-    <div class="page">
-     {% block body_header %}{% endblock body_header %}
-     {% block body %}{% endblock body %}
-     {% block body_footer %}{% endblock body_footer %}
-    </div>
-  </div>
-  <div id="footer">
-    <div class="page_margins">
-    {% block footer %}{% endblock footer %}
+    {% block body_header %}{% endblock body_header %}
+    {% block body %}{% endblock body %}
+    {% block body_footer %}{% endblock body_footer %}
+    <div class="footer">
+      {% block footer %}{% endblock footer %}
     </div>
   </div>
 {% block body_bottom %}{% endblock body_bottom %}
